--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,6 +132,14 @@ body {
   height: 23rem;
 } */
 
+/* Logged OUT button */
+.css-1un3lp3 {
+  border-radius: 6px !important;
+  padding: 10px 8px !important;
+  background-color: #2b79f6 !important;
+  color: #ffffff !important;
+}
+
 .css-6j78kk {
   padding: 7px 8px !important;
   border-radius: 6px !important;
@@ -173,42 +181,66 @@ body {
   z-index: 0;
 }
 
-.content-box {
-  box-sizing: content-box;
+/* Scroll Icon Animation */
+
+/* .icon-scroll {
+  position: relative;
+} */
+
+.icon-scroll,
+.icon-scroll:before {
+  position: absolute;
+  left: 50%;
+}
+.icon-scroll {
+  width: 30px;
+  height: 50px;
+  margin-left: -20px;
+  /* bottom: 10%; */
+  /* margin-top: -35px; */
+  box-shadow: inset 0 0 0 1px #fff;
+  border-radius: 25px;
+}
+.icon-scroll:before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  background: #fff;
+  margin-left: -3px;
+  top: 8px;
+  border-radius: 4px;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: scroll;
+          animation-name: scroll;
+}
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(46px);
+  }
+}
+@keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(46px);
+  }
 }
 
-/* .input-number {
-position: relative;
-width: 90px;
-height: 34px;
-background-color: transparent;
-overflow: hidden;
-border-radius: 20px;
-margin: 2px;
-display: flex;
-font-family: "Varela Round", sans-serif;
-font-size: 1.4rem;
-line-height: 1.6;
+
+/* .content-box {
+  box-sizing: content-box;
 } */
 
-/* .input-number span {
-position: absolute;
-left: 50%;
-margin-left: -16px;
-display: inline-block;
-background-color: rgb(93, 92, 92);
-height: 100%;
-width: 34px;
-border-radius: 20px;
-text-align: center;
-line-height: 34px;
-font-size: 16px;
-color: #6C6DFF;
-letter-spacing: -1px;
-font-weight: bold;
-} */
-
-.input-number button {
+/* .input-number button {
   display: inline-block;
   width: 50px;
   height: 100%;
@@ -219,9 +251,9 @@ font-weight: bold;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.4);
   transition: background-color 0.2s ease;
-}
+} */
 
-.input-number button:nth-of-type(1) {
+/* .input-number button:nth-of-type(1) {
   padding-right: 17px;
 }
 
@@ -239,4 +271,4 @@ font-weight: bold;
 
 .highlight {
   color: #16d323;
-}
+} */
