--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,100;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -125,18 +127,15 @@
 }
 
 body {
-  background-color: #020617;
+  /* font-family: 'Lato', monospace; */
+  background-color: #020826;
 }
-
-/* .h-90 {
-  height: 23rem;
-} */
 
 /* Logged OUT button */
 
 .css-1un3lp3 {
   border-radius: 6px !important;
-  padding: 10px 8px !important;
+  padding: 12px 10px !important;
   background-color: #2b79f6 !important;
   color: #ffffff !important;
 }
@@ -158,20 +157,6 @@ body {
 
 .css-1iyoj2o div {
   height: 3px !important;
-}
-
-.blob1 {
-  width: 30vw;
-  height: 30vh;
-  /* top: 20vh;
-  left: 26vw; */
-}
-
-.blob2 {
-  width: 60vw;
-  height: 60vh;
-  /* top: 15vh;
-  left: 40vw; */
 }
 
 /* Scroll Icon Animation */
@@ -224,40 +209,127 @@ body {
   }
 }
 
+.box {
+  position: relative;
+  width: auto;
+  height: auto;
+  background: #130a22;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
 
-/* .content-box {
-  box-sizing: content-box;
-} */
+.box::before { 
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent, #7196f5);
+  animation: animate 4s linear infinite;
+}
 
-/* .input-number button {
-  display: inline-block;
-  width: 50px;
+.box::after { 
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent, #6d42f9);
+  animation: animate 4s linear infinite;
+  animation-delay: -2s;
+}
+
+@keyframes animate 
+{
+  0%
+  {
+    transform: rotate(0deg);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
+
+.box span {
+  position: absolute;
+  inset: 10px;
+  border-radius: 8px;
+  background: #0c1022;
+  z-index: 1;
+}
+
+.box img {
+  z-index: 10;
+  padding: 8px;
+  border-radius: 8px;
+}
+
+.box h2 {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  font-size: 10em;
+}
+
+
+.load-wraper{
+  position: relative;
   height: 100%;
+  width: 100%;
+  background-color: rgb(211,211,211);
+  z-index: 44;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.activity{
+  position: absolute;
+  left: -45%;
+  height: 100%;
+  width: 45%;
+  background-image: linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
+  background-image: -moz-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
+  background-image: -webkit-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
+  animation: loading 1s infinite;
+  z-index: 45;
+}
+
+@keyframes loading {
+  0%{
+    left: -45%;
+  }
+  100%{
+    left: 100%;
+  }
+}
+
+.tippy-popper {
+  max-width: 260px !important;
+}
+
+.tippy-tooltip, .tippy-tooltip [x-circle] {
+  background-color: #2b79f6 !important;
+}
+
+.tippy-tooltip-content {
   background-color: transparent;
-  border: none;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.4);
-  transition: background-color 0.2s ease;
-} */
-
-/* .input-number button:nth-of-type(1) {
-  padding-right: 17px;
+  text-align: left;
 }
 
-.input-number button:nth-of-type(2) {
-  padding-left: 17px;
+.tippy-popper[x-placement^=top] [x-arrow] {
+  border-top: 7px solid #2b79f6 !important;
 }
 
-.input-number button:hover {
-  background-color: rgba(255, 255, 255, 0.25);
-}
 
-.center {
-  text-align: center;
+.image-gradient::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  background-image: linear-gradient(0deg, #ffffff13, #1a1a1ac8);
+  opacity: .7;
+  z-index: 0;
 }
-
-.highlight {
-  color: #16d323;
-} */
