--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -348,13 +348,106 @@ body {
   color: #ffffff !important;
 }
 
-
-
 @media screen and (min-width: 768px) { 
-/* Points between nav links */
-nav li + li:before{
-  content: " • ";
-  padding-right: 30px;
-  opacity: 0.5;
+  /* Points between nav links */
+  nav li + li:before {
+    content: " • ";
+    padding-right: 30px;
+    opacity: 0.5;
+  }
 }
+
+
+/* FAQ */
+
+.container {
+  padding: 2rem;
+  text-align: center;
+}
+
+.faq {
+  margin: 3rem 0;
+}
+.question-wrapper {
+  border-bottom: 1px solid $details;
+  margin: 0 auto;
+  padding: 1rem;
+  transition: 1s;
+}
+
+.question {
+  display: flex;
+  font-size: 1rem;
+  font-weight: 500;
+  color: $primary-text-color;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+.answer {
+  display: none;
+}
+
+.answer.active {
+  display: block;
+  text-align: left;
+  padding-top: 1.5rem;
+  line-height: 1.5;
+  animation: slidein 0.4s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slidein {
+  from {
+    opacity: 0.3;
+    transform: translateY(-20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+/* SHINE ANIMATION */
+
+.shine {
+  position: relative;
+}
+
+.shine::after {
+  content: '';
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #323463;
+  border-radius: 3px;
+  animation: animate-shine 4s ease-out infinite;
+}
+
+@keyframes animate-shine {
+  0% { 
+      opacity: 0;
+      width: 0; }
+  16.66667% { 
+      opacity: .3; }
+  33.33333% { 
+      opacity: 0;
+      width: 95%; }
+  100% { 
+      opacity: 0;
+      width: 95%; }
 }
