--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,100;1,300;1,400;1,700&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -131,12 +131,21 @@ body {
   background-color: #020826;
 }
 
+footer a:hover {
+  text-decoration: underline;
+}
+
 /* Logged OUT button */
 
 .css-1un3lp3 {
   border-radius: 6px !important;
   padding: 12px 10px !important;
-  background-color: #2b79f6 !important;
+  background-color: #2563EB !important;
+  color: #ffffff !important;
+}
+
+.css-1un3lp3:hover {
+  background-color: #487ef1 !important;
   color: #ffffff !important;
 }
 
@@ -148,7 +157,7 @@ body {
 .css-16br1f7 {
   padding: 6px 8px !important;
   gap: 12px !important;
-  background-color: #101e52 !important;
+  background-color: #20284ebe !important;
   border-radius: 8px !important;
   border: none !important;
 }
@@ -222,8 +231,8 @@ body {
   position: relative;
   width: auto;
   height: auto;
-  background: #130a22;
-  border-radius: 10px;
+  background: transparent;
+  border-radius: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -233,20 +242,20 @@ body {
 .box::before { 
   content: '';
   position: absolute;
-  width: 500px;
-  height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent, #7196f5);
-  animation: animate 4s linear infinite;
+  width: 700px;
+  height: 700px;
+  background-image: conic-gradient(transparent, transparent, transparent, #B72030);
+  animation: animate 8s linear infinite;
 }
 
 .box::after { 
   content: '';
   position: absolute;
-  width: 500px;
-  height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent, #6d42f9);
-  animation: animate 4s linear infinite;
-  animation-delay: -2s;
+  width: 700px;
+  height: 700px;
+  background-image: conic-gradient(transparent, transparent, transparent, #2962E7);
+  animation: animate 8s linear infinite;
+  animation-delay: -4s;
 }
 
 @keyframes animate 
@@ -263,25 +272,17 @@ body {
 
 .box span {
   position: absolute;
-  inset: 10px;
+  inset: 6px;
   border-radius: 8px;
-  background: #0c1022;
+  background: #141c3f;
   z-index: 1;
 }
 
 .box img {
   z-index: 10;
-  padding: 8px;
-  border-radius: 8px;
+  padding: 12px;
+  border-radius: 17px;
 }
-
-.box h2 {
-  position: relative;
-  z-index: 2;
-  color: #fff;
-  font-size: 10em;
-}
-
 
 .load-wraper{
   position: relative;
@@ -318,45 +319,32 @@ body {
 }
 
 .tippy-tooltip, .tippy-tooltip [x-circle] {
-  background-color: #2b79f6 !important;
+  background-color: #f6f6f6 !important;
 }
 
 .tippy-tooltip-content {
   background-color: transparent;
   text-align: left;
+  color: #000000;
+
 }
 
 .tippy-popper[x-placement^=top] [x-arrow] {
-  border-top: 7px solid #2b79f6 !important;
+  border-top: 7px solid #f6f6f6 !important;
 }
 
-
-/* .image-gradient::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 30%;
-  background-image: linear-gradient(0deg, #ffffff13, #1a1a1ac8);
-  opacity: .7;
-  z-index: 0;
-} */
+.Toastify__toast-body {
+  padding: 12px !important;
+}
 
 .Toastify__toast-theme--dark {
-  background: #2b79f6 !important;
-  color: #ffffff !important;
+  background: #f6f6f6 !important;
+  color: #000000 !important;
 }
 
-@media screen and (min-width: 768px) { 
-  /* Points between nav links */
-  nav li + li:before {
-    content: " • ";
-    padding-right: 30px;
-    opacity: 0.5;
-  }
+.Toastify__toast-theme--dark button {
+  color: #000000 !important;
 }
-
 
 /* FAQ */
 
@@ -433,7 +421,7 @@ button:focus {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #323463;
+  background: #868aeb;
   border-radius: 3px;
   animation: animate-shine 4s ease-out infinite;
 }
@@ -450,4 +438,37 @@ button:focus {
   100% { 
       opacity: 0;
       width: 95%; }
+}
+
+
+/* Soundplayer icon */
+
+@keyframes playPulse {
+  0% {
+      transform: scaleY(.25)
+  }
+
+  50% {
+      transform: scaleY(.5)
+  }
+
+  to {
+      transform: scaleY(1)
+  }
+}
+
+.animate-[playPulse1] {
+  animation: playPulse .5s ease-in-out -.2s infinite alternate
+}
+
+.animate-\[playPulse_0\.5s_ease-in-out_-0\.2s_infinite_alternate\] {
+  animation: playPulse .5s ease-in-out -.2s infinite alternate
+}
+
+.animate-\[playPulse_0\.35s_ease-in-out_-0\.5s_infinite_alternate\] {
+  animation: playPulse .35s ease-in-out -.5s infinite alternate
+}
+
+.animate-\[playPulse_0\.65s_ease-in-out_-0\.7s_infinite_alternate\] {
+  animation: playPulse .65s ease-in-out -.7s infinite alternate
 }
